# AI-Multi-Agent

./: .vercelignore  README.md  pyproject.toml  requirements.txt  test_api_call.py  test_e2e.py  vercel.json
data/dubai/: areas.json  attractions.json  manifest.json  price_bands.json  transit_matrix.json  wikivoyage_api.json  wikivoyage_raw.md
docs/: architecture.md  evals.md  implementation-plan.md  problemStatement.md  problemStatement.txt
src/: agents.py  api.py  data_ingestion.py  graph.py  graph_state.py  llm_client.py  run_graph.py  schemas.py  test_agents.py  tools.py
static/: app.js  index.html  styles.css
stitch_dubai_voice_trip_planner/: DESIGN.md  code.html
