[project]
name = "aura-concierge"
version = "0.1.0"
description = "Aura Concierge AI Travel Planner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langgraph",
    "pydantic",
    "groq",
    "google-generativeai",
    "beautifulsoup4",
    "requests",
    "pytest",
    "httpx",
    "python-multipart",
    "langchain-groq",
    "langchain-google-genai",
    "python-dotenv"
]

[tool.vercel]
entrypoint = "src.api:app"
